# KRAnalytics

./: .gitignore  .pre-commit-config.yaml  API_ERRORS_RESOLVED.md  CLEANUP_FOR_GITHUB.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_UPLOAD_SUMMARY.md  KERNEL_SETUP_COMPLETE.md  LICENSE  Makefile  NAMING_CONVENTIONS_UPDATED.md  PUBLIC_REPO_MIGRATION_COMPLETE.md  README.md  READY_FOR_GITHUB.md  REFACTORING_COMPLETE.md  SAMPLE_DATA_COMPLETE.md  SECURITY.md  cleanup_for_github.sh  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml  validate-notebooks.yml
data/sample_datasets/: MANIFEST.json  MANIFEST.txt  README.md  VERSION.txt  bls_employment_counties_sample.csv  bls_employment_national.csv  census_income_2022.csv  census_inequality_2022.csv  epa_environmental_burden_sample.csv  fbi_crime_stats_sample.csv
docs/: CONTRIBUTING.md  README.md  api-configuration.md  system-architecture.md  visualization-reference.md
docs/api-documentation/: ANALYTICS_MODEL_MATRIX_API_REQUIREMENTS.md  API_KEY_MANAGER_IMPLEMENTATION.md  API_KEY_MANAGER_QUICK_REFERENCE.md  API_REQUIREMENTS_ANALYSIS.md  CUSTOM_INSTRUCTIONS_UPDATE.md  FRED_API_SETUP_GUIDE.md
docs/quick-references/: ANALYTICS_ENGINE_QUICK_GUIDE.md  DASHBOARD_QUICK_FIX_GUIDE.md  PHASE1_QUICK_REFERENCE.md  (+3 more)
reports/: tier1_income_distribution_data.csv  tier1_income_distribution_results.json
scripts/: generate_sample_data.py  standardize_notebooks.py  validate_kranalytics_notebooks.py
tests/: README.md  conftest.py  test_notebooks.py  test_workspace_cohesion.py
(+29 files in other folders)
